Design: 미니홈 메인 페이지 꾸미기 영역 추가에 따른 스타일 코드 추가

--- a/src/styles/Minihome/MiniHomeMain.module.css
+++ b/src/styles/Minihome/MiniHomeMain.module.css
@@ -27,15 +27,30 @@
 .section_aside {
   margin-left: 0.5rem;
 }
+/* ---------------------------------------- */
 .section_article_1 {
   width: 100%;
   height: 30rem;
   background-color: white;
   border: none;
   border-radius: 10px;
-  padding: 1rem;
-  box-sizing: border-box;
+  position: relative;
 }
+.section_article_1 > div {
+  width: 100%;
+  height: 100%;
+}
+.section_article_1 > div > img {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+}
+.section_article_1_imgList {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+/* ---------------------------------------- */
 .section_article_2 {
   flex-grow: 1;
   height: 30rem;
