--- a/src/styles/Minihome/Adorn/MinihomeAdorn.module.css
+++ b/src/styles/Minihome/Adorn/MinihomeAdorn.module.css
@@ -15,21 +15,22 @@
   flex-direction: column;
   gap: 1.5rem;
 }
-/* ---------------------------------------------- */
-.aside {
+/* ------------------------------------- */
+.header {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-.aside_wrapper {
+.header_aside {
   display: flex;
   align-items: center;
   gap: 1rem;
 }
-.aside_title {
+.header_aside_title {
   font-size: 1.5rem;
 }
-.section {
+/* ------------------------------------ */
+.article {
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -37,8 +38,7 @@
   overflow: scroll;
   scrollbar-width: none;
 }
-
-.header {
+.article_header {
   min-height: 30rem;
   width: 100%;
   background-color: white;
@@ -48,34 +48,27 @@
   justify-content: center;
   position: relative;
 }
-.header_background {
+.article_header_background {
   position: absolute;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
 }
-.header > div {
-  width: 8rem;
-  height: 8rem;
-  position: absolute;
-  border: none;
-}
-.header > div > img {
-  pointer-events: none;
-  border: none;
-}
-.main {
+
+/* ----------------------------------- */
+.section {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
   /* overflow: hidden; */
 }
-.main_nav {
+.section_nav {
   width: 100%;
   display: flex;
   align-items: center;
 }
+/* ------------------------------------ */
 .button {
   width: 100%;
   height: 2.5rem;
