--- a/src/styles/User/UserJoin.module.css
+++ b/src/styles/User/UserJoin.module.css
@@ -24,15 +24,61 @@
 .header_title {
   font-size: 3rem;
 }
-
+/* ------------------------------------------------ */
 .form {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  width: 100%;
+  height: 100%;
+}
+.form_fieldset {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: none;
+}
+.form_legend {
+  text-align: center;
+}
+.form_header_wrapper {
+  display: flex;
+  gap: 0.5rem;
+  padding: 1rem;
+}
+.form_header_wrapper > figure > input {
+  display: none;
+}
+.form_header_wrapper > figure > label {
+  width: 5rem;
+  height: 5rem;
+  cursor: pointer;
+}
+.form_header_wrapper > figure > label > img {
+  width: 5rem;
+  height: 5rem;
+  border-radius: 100%;
+}
+.form_header_wrapper > figure > label > img:hover {
+  box-sizing: border-box;
+  transform: scale(1.1);
+  transition-duration: 200ms;
+  cursor: pointer;
+}
+.form_header_error,
+.form_section_article_error {
+  font-size: 0.8rem;
+  color: red;
+  font-weight: bold;
+}
+/* .form {
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
   gap: 2rem;
 }
-/* -------------------------------------------------- */
 .form_header {
   width: 100%;
   display: flex;
@@ -77,7 +123,7 @@
   font-size: 0.8rem;
   color: red;
   font-weight: bold;
-}
+} */
 /* --------------------------------------------- */
 .form_section {
   height: 50%;
