Design: 보유 아이템 목록 예외 처리 로직 스타일 코드 추가

--- a/src/styles/Market/Enroll/MarketEnrollItemList.module.css
+++ b/src/styles/Market/Enroll/MarketEnrollItemList.module.css
@@ -26,6 +26,7 @@
   overflow: hidden;
 }
 .section_wrapper {
+  height: 100%;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
@@ -33,6 +34,14 @@
 .section_title {
   font-weight: bold;
   font-size: 1.2rem;
+}
+.section_message {
+  font-size: 1.125rem;
+  font-weight: bold;
+  height: 5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .section_article {
   height: 100%;
