Design: 판매 아이템 미리보기 스타일 추가

--- a/src/styles/Market/Enroll/MarketEnrollPreview.module.css
+++ b/src/styles/Market/Enroll/MarketEnrollPreview.module.css
@@ -29,6 +29,12 @@
   border-radius: 10px;
   object-fit: contain;
 }
+.section_header_nonImg {
+  width: 15rem;
+  height: 15rem;
+  border-radius: 10px;
+  background-color: lightgray;
+}
 /* -------------------------------- */
 .section_article {
   position: relative;
