--- a/src/styles/Market/MarketMain.module.css
+++ b/src/styles/Market/MarketMain.module.css
@@ -87,9 +87,12 @@
   scrollbar-width: none;
 }
 .article_section {
+  height: 100%;
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: repeat(6, 1fr);
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: repeat(7, 1fr);
   gap: 0.5rem;
   box-sizing: border-box;
+  overflow: scroll;
+  scrollbar-width: none;
 }
