--- a/src/styles/Minihome/ItemBook/MinihomeItemBook.module.css
+++ b/src/styles/Minihome/ItemBook/MinihomeItemBook.module.css
@@ -1,7 +1,7 @@
 .container {
   min-width: 68rem;
   height: 100vh;
-  padding: 2rem 4rem;
+  padding: 4rem;
   box-sizing: border-box;
   background: linear-gradient(to bottom, #d8faff, #b6cdff);
   display: flex;
