--- a/src/styles/Main/MainPage.module.css
+++ b/src/styles/Main/MainPage.module.css
@@ -1,16 +1,18 @@
 .container {
   min-width: 68rem;
   height: 100vh;
-  padding: 2rem 4rem;
+  padding: 4rem;
   box-sizing: border-box;
   background: linear-gradient(to bottom, #d8faff, #b6cdff);
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  overflow: scroll;
+  scrollbar-width: none;
 }
 .wrapper {
-  width: 60rem;
+  width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -19,7 +21,7 @@
 /* ------------------------------------------- */
 .header {
   width: 100%;
-  height: 30%;
+  height: 100vh;
   text-align: center;
   display: flex;
   align-items: center;
@@ -27,4 +29,44 @@
 }
 .title {
   font-size: 3rem;
+}
+/* ----------------------------------- */
+.section {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.article {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  border: 3px solid white;
+  padding: 1rem;
+  box-sizing: border-box;
+  border-radius: 10px;
+}
+.article > h1 {
+  font-size: 1.5rem;
+  text-align: center;
+}
+.img_preview {
+  display: flex;
+  gap: 1rem;
+  background-color: white;
+  border-radius: 10px;
+  padding: 0.5rem;
+  box-sizing: border-box;
+  overflow-x: scroll;
+  scrollbar-width: none;
+}
+.img_preview > img {
+  width: 40rem;
+  height: 20rem;
+  border: 3px solid lightgray;
+  border-radius: 10px;
+  box-sizing: border-box;
 }
