--- a/src/styles/Layouts/Bell.module.css
+++ b/src/styles/Layouts/Bell.module.css
@@ -1,10 +1,11 @@
 .container {
-  position: fixed;
-  top: 5rem;
-  right: 1rem;
-  width: 1rem;
-  height: 1rem;
+  position: relative;
+  top: 0;
+  right: 0;
+  width: 2.5rem;
+  height: 2.5rem;
   padding: 1rem;
+  box-sizing: border-box;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -13,8 +14,23 @@
   border-radius: 10px;
   font-weight: bold;
   color: #2D2D2D;
+  background-color: lightgray;
 }
 .container > img {
-  width: 2rem;
-  height: 2rem;
+  width: 1.8rem;
+  height: 1.8rem;
+}
+
+.count {
+  position: absolute;
+  top: 0.3rem;
+  right: 0.5rem;
+  width: 1rem;
+  height: 1rem;
+  text-align: center;
+  padding: 0.1rem;
+  background-color: red;
+  color: white;
+  border-radius: 100%;
+  font-size: 0.9rem;
 }
