--- a/src/styles/Layouts/Bell.module.css
+++ b/src/styles/Layouts/Bell.module.css
@@ -14,23 +14,23 @@
   border-radius: 10px;
   font-weight: bold;
   color: #2D2D2D;
-  background-color: lightgray;
+  /* background-color: lightgray; */
+  
 }
 .container > img {
   width: 1.8rem;
   height: 1.8rem;
 }
 
-.count {
+.isItem {
   position: absolute;
-  top: 0.3rem;
-  right: 0.5rem;
-  width: 1rem;
-  height: 1rem;
-  text-align: center;
-  padding: 0.1rem;
+  top: 0.4rem;
+  right: 0.7rem;
+  width: 0.5rem;
+  height: 0.5rem;
   background-color: red;
-  color: white;
   border-radius: 100%;
-  font-size: 0.9rem;
+  /* text-align: center;
+  color: white;
+  font-size: 0.9rem; */
 }
