--- a/src/styles/Minihome/Header/MinihomeHeader.module.css
+++ b/src/styles/Minihome/Header/MinihomeHeader.module.css
@@ -5,6 +5,7 @@
   display: flex;
   align-items: center;
   text-align: center;
+  color: #2d2d2d;
 }
 .header_profile {
   width: 40%;
@@ -38,6 +39,7 @@
 }
 .section_article {
   display: flex;
+  align-items: center;
   gap: 1rem;
   width: 100%;
 }
@@ -110,6 +112,11 @@
   animation-delay: 1s;
   animation-timing-function: ease-in-out;
   animation-iteration-count: infinite;
+}
+.section_article_setting {
+  width: 1.5rem;
+  height: 1.5rem;
+  opacity: 0.7;
 }
 .section_info {
   display: flex;
