--- a/src/styles/Layouts/Bell.module.css
+++ b/src/styles/Layouts/Bell.module.css
@@ -1,25 +1,24 @@
 .container {
-  position: relative;
-  top: 0;
-  right: 0;
-  width: 2.5rem;
-  height: 2.5rem;
-  padding: 1rem;
-  box-sizing: border-box;
+  position: absolute;
+  top: 5rem;
+  left: 1rem;
+  width: 3rem;
+  height: 3rem;
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 0.5rem;
-  background-color: white;
-  border-radius: 10px;
   font-weight: bold;
   color: #2D2D2D;
-  /* background-color: lightgray; */
-  
+  /* padding: 1rem;
+  box-sizing: border-box;
+  background-color: white;
+  border-radius: 10px;
+  background-color: lightgray; */
 }
 .container > img {
-  width: 1.8rem;
-  height: 1.8rem;
+  width: 2.5rem;
+  height: 2.5rem;
 }
 
 .isItem {
