--- a/src/styles/Layouts/BellItems.module.css
+++ b/src/styles/Layouts/BellItems.module.css
@@ -1,14 +1,14 @@
 .container {
   position: absolute;
-  top: 150%;
-  left: -450%;
-  width: 14rem;
+  top: 100%;
+  left: 0;
+  width: 20rem;
   height: 15rem;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
   align-items: center;
-  justify-content: center;
+  justify-content: start;
   padding: 0.5rem;
   box-sizing: border-box;
   border-radius: 10px;
@@ -19,9 +19,15 @@
 .article {
   background-color: rgb(224, 224, 224);
   width: 100%;
-  height: 100%;
   padding: 0.5rem;
   box-sizing: border-box;
   border-radius: 10px;
   font-size: 0.9rem;
+}
+.noItem {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
