--- a/src/styles/Market/Enroll/MarketEnrollPreview.module.css
+++ b/src/styles/Market/Enroll/MarketEnrollPreview.module.css
@@ -14,6 +14,27 @@
   border-radius: 10px;
 }
 /* ------------------------------ */
+.section_header_wrapper {
+  position: relative;
+  width: 100%;
+  height: 19rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.section_header_text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+/* ------------------------------ */
 .section_header {
   position: relative;
   aspect-ratio: 1/1;
