--- a/src/styles/Minihome/Reply/MinihomeReplyItem.module.css
+++ b/src/styles/Minihome/Reply/MinihomeReplyItem.module.css
@@ -5,16 +5,29 @@
   padding: 0.5rem;
   box-sizing: border-box;
   border-radius: 5px;
-  background-color: white;
   display: flex;
   flex-direction: column;
   width: 100%;
+  position: relative;
+}
+.main_reply_background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-radius: 10px;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  opacity: 0.6;
+  z-index: -1;
 }
 .main_reply_header {
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: 0 0.5rem 0 0;
+  box-sizing: border-box;
 }
 .main_reply_user {
   display: flex;
@@ -25,12 +38,12 @@
   font-weight: bold;
 }
 .main_reply_user > img {
-  width: 2.5rem;
-  height: 2.5rem;
-  border-radius: 100%;
-  background-color: #999999;
+  width: 2.2rem;
+  height: 2.2rem;
   padding: 0.1rem;
   box-sizing: border-box;
+  background-color: white;
+  border-radius: 100%;
 }
 .main_reply_date {
   font-size: 0.9rem;
@@ -51,10 +64,11 @@
   justify-content: space-between;
   width: 100%;
   height: 100%;
-  background-color: white;
   border-radius: 5px;
   box-sizing: border-box;
   font-size: 1rem;
+  padding: 0 0.5rem 0 0;
+  box-sizing: border-box;
 }
 .main_bottom > p {
   padding: 0.5rem;
@@ -73,6 +87,7 @@
   text-decoration: none;
   color: #2d2d2d;
   cursor: pointer;
+  font-size: 0.9rem;
 }
 .main_buttons > p:hover {
   font-weight: bold;
