--- a/src/styles/Minihome/Reply/MinihomeReplyNew.module.css
+++ b/src/styles/Minihome/Reply/MinihomeReplyNew.module.css
@@ -4,6 +4,18 @@
   flex-direction: column;
   gap: 1rem;
   overflow: hidden;
+  position: relative;
+}
+.main_reply_input_background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  opacity: 0.6;
+  z-index: -1;
+  border-radius: 10px;
 }
 .main_reply_input {
   display: flex;
@@ -12,7 +24,6 @@
   padding: 0.5rem;
   box-sizing: border-box;
   border-radius: 5px;
-  background-color: white;
   position: relative;
 }
 .main_reply_input > input {
