--- a/src/styles/Layouts/BellItems.module.css
+++ b/src/styles/Layouts/BellItems.module.css
@@ -1,8 +1,8 @@
 .container {
   position: absolute;
-  top: 100%;
-  left: 0;
-  width: 20rem;
+  top: 8rem;
+  left: 1rem;
+  width: 15rem;
   height: 15rem;
   display: flex;
   flex-direction: column;
@@ -12,17 +12,18 @@
   padding: 0.5rem;
   box-sizing: border-box;
   border-radius: 10px;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.6);
   overflow: scroll;
   scrollbar-width: none;
 }
 .article {
-  background-color: rgb(224, 224, 224);
+  background-color: white;
   width: 100%;
   padding: 0.5rem;
   box-sizing: border-box;
   border-radius: 10px;
   font-size: 0.9rem;
+  cursor: pointer;
 }
 .noItem {
   width: 100%;
