--- a/src/styles/Main/MainPage.module.css
+++ b/src/styles/Main/MainPage.module.css
@@ -1,72 +1,90 @@
 .container {
   min-width: 68rem;
   height: 100vh;
-  padding: 4rem;
   box-sizing: border-box;
   background: linear-gradient(to bottom, #d8faff, #b6cdff);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  overflow: scroll;
-  scrollbar-width: none;
 }
 .wrapper {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: 1.5rem;
+  height: 100vh;
+  overflow-y: scroll;
+  scrollbar-width: none;
+  scroll-snap-type: y mandatory;
+  scroll-behavior: smooth;
+  position: relative;
 }
 /* ------------------------------------------- */
-.header {
-  width: 100%;
-  height: 100vh;
-  text-align: center;
+.nav {
+  position: fixed;
+  top: 25rem;
+  right: 1.5rem;
+  z-index: 50;
+}
+.nav > ul {
   display: flex;
-  align-items: center;
+  flex-direction: column;
   justify-content: center;
+  gap: 1rem;
+  list-style: none;
+}
+.nav > ul > li {
+  background-color: white;
+  box-shadow: 1px 2px rgba(0, 0, 0, 0.5);
+  padding: 0.5rem;
+  border-radius: 100%;
+  cursor: pointer;
+}
+.nav > ul > li:hover {
+  background-color: #2d2d2d;
+  transition: all 0.2s ease-in-out;
+}
+/* ----------------------------------- */
+.header {
+  height: 100vh;
+  padding-top: 8rem;
+  scroll-snap-align: start;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+  justify-content: start;
 }
 .title {
   font-size: 3rem;
 }
-/* ----------------------------------- */
-.section {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
+.description {
+  font-size: 1.2rem;
+  color: gray;
+  opacity: 0.7;
 }
 .article {
-  width: 100%;
   height: 100vh;
+  scroll-snap-align: start;
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  border: 3px solid white;
-  padding: 1rem;
-  box-sizing: border-box;
-  border-radius: 10px;
+  align-items: center;
+  justify-content: center;
 }
-.article > h1 {
-  font-size: 1.5rem;
+.article > h3 {
+  width: 100%;
+  font-size: 2rem;
   text-align: center;
+  border-bottom: 3px solid lightblue;
 }
 .img_preview {
+  width: 100%;
   display: flex;
   gap: 1rem;
-  background-color: white;
-  border-radius: 10px;
-  padding: 0.5rem;
-  box-sizing: border-box;
   overflow-x: scroll;
+  scroll-snap-type: x mandatory; /* 가로 스크롤 스냅 활성화 */
+  scroll-behavior: smooth; /* 부드러운 스크롤 */
   scrollbar-width: none;
 }
 .img_preview > img {
-  width: 40rem;
-  height: 20rem;
-  border: 3px solid lightgray;
+  width: 60rem;
+  height: 40rem;
+  border-radius: 10px;
   border-radius: 10px;
   box-sizing: border-box;
+  scroll-snap-align: start;
 }
