--- a/src/styles/Market/MarketMain.module.css
+++ b/src/styles/Market/MarketMain.module.css
@@ -86,6 +86,17 @@
   overflow: scroll;
   scrollbar-width: none;
 }
+.article_loading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+.article_loading > img {
+  width: 16rem;
+  height: 16rem;
+}
 .article_section {
   height: 100%;
   display: grid;
