--- a/src/styles/Minihome/Adorn/MinihomeAdorn.module.css
+++ b/src/styles/Minihome/Adorn/MinihomeAdorn.module.css
@@ -35,8 +35,8 @@
   flex-direction: column;
   gap: 1rem;
   height: 100%;
-  overflow: scroll;
-  scrollbar-width: none;
+  /* overflow: scroll;
+  scrollbar-width: none; */
 }
 .article_header {
   min-height: 30rem;
@@ -60,7 +60,7 @@
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 .section_nav {
   width: 100%;
