--- a/src/styles/Minihome/Adorn/MinihomeAdornItemList.module.css
+++ b/src/styles/Minihome/Adorn/MinihomeAdornItemList.module.css
@@ -2,10 +2,12 @@
   height: 100%;
   display: grid;
   grid-template-columns: repeat(7, 1fr);
-  grid-template-rows: repeat(4, 1fr);
   gap: 0.5rem;
   overflow: scroll;
   scrollbar-width: none;
+}
+.main > p {
+  display: block;
 }
 .main > div {
   background-color: white;
@@ -13,10 +15,26 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 8rem;
+  height: 8rem;
   border-radius: 10px;
+  cursor: pointer;
 }
 .main > div > img {
   width: 6rem;
   height: 6rem;
   border-radius: 10px;
+  cursor: pointer;
+}
+.loadBtn {
+  all: unset;
+  text-align: center;
+  font-size: 1.125rem;
+  display: block;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+}
+.loadBtn:hover {
+  font-weight: bold;
 }
