--- a/src/styles/Market/Enroll/MarketEnrollItem.module.css
+++ b/src/styles/Market/Enroll/MarketEnrollItem.module.css
@@ -1,4 +1,9 @@
 .article_S {
+  width: 8rem;
+  height: 8rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   aspect-ratio: 1/1;
   background: linear-gradient(180deg, #ff00f2, #ff8400, #f4ff58);
   padding: 1px;
@@ -7,6 +12,11 @@
   box-sizing: border-box;
 }
 .article_A {
+  width: 8rem;
+  height: 8rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   aspect-ratio: 1/1;
   background-color: #ff63f7;
   padding: 1px;
@@ -15,6 +25,11 @@
   box-sizing: border-box;
 }
 .article_B {
+  width: 8rem;
+  height: 8rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   aspect-ratio: 1/1;
   background-color: #79ff51;
   padding: 1px;
@@ -23,6 +38,11 @@
   box-sizing: border-box;
 }
 .article_C {
+  width: 8rem;
+  height: 8rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   aspect-ratio: 1/1;
   background-color: #f4ff58;
   padding: 1px;
@@ -31,6 +51,11 @@
   box-sizing: border-box;
 }
 .article_D {
+  width: 8rem;
+  height: 8rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   aspect-ratio: 1/1;
   background-color: #eaeaea;
   padding: 1px;
@@ -56,8 +81,8 @@
 .article_img {
   aspect-ratio: 1/1;
   object-fit: contain;
-  width: 100%;
-  height: 100%;
+  width: 6rem;
+  height: 6rem;
   border-radius: 10px;
   position: absolute;
 }
