--- a/src/styles/Market/Enroll/MarketEnrollItemList.module.css
+++ b/src/styles/Market/Enroll/MarketEnrollItemList.module.css
@@ -23,13 +23,16 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  overflow: hidden;
+  overflow: scroll;
+  scrollbar-width: none;
 }
 .section_wrapper {
   height: 100%;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
+  overflow: scroll;
+  scrollbar-width: none;
 }
 .section_title {
   font-weight: bold;
@@ -44,16 +47,15 @@
   justify-content: center;
 }
 .section_article {
-  height: 100%;
+  /* height: 100%; */
   display: grid;
   grid-template-columns: repeat(7, 1fr);
-  grid-template-rows: repeat(7, 1fr);
   gap: 0.5rem;
-  overflow-y: scroll;
+  overflow: scroll;
   scrollbar-width: none;
 }
 /* ---------------------------------------------- */
-.section_1 {
+.numberList {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -66,6 +68,7 @@
   padding: 0.3rem;
   width: 1rem;
   text-align: center;
+  height: 1rem;
 }
 .pageNum:hover {
   color: white;
