--- a/src/styles/Minihome/Adorn/MinihomeAdorn.module.css
+++ b/src/styles/Minihome/Adorn/MinihomeAdorn.module.css
@@ -31,12 +31,13 @@
 }
 /* ------------------------------------ */
 .article {
+  flex-grow: 1;
   display: flex;
   flex-direction: column;
   gap: 1rem;
   height: 100%;
-  /* overflow: scroll;
-  scrollbar-width: none; */
+  overflow: scroll;
+  scrollbar-width: none;
 }
 .article_header {
   min-height: 30rem;
@@ -57,6 +58,7 @@
 }
 /* ----------------------------------- */
 .section {
+  min-height: 12rem;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
