--- a/src/styles/Market/Enroll/MarketEnrollItemList.module.css
+++ b/src/styles/Market/Enroll/MarketEnrollItemList.module.css
@@ -31,8 +31,6 @@
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-  overflow: scroll;
-  scrollbar-width: none;
 }
 .section_title {
   font-weight: bold;
@@ -47,7 +45,7 @@
   justify-content: center;
 }
 .section_article {
-  /* height: 100%; */
+  min-height: 9rem;
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   gap: 0.5rem;
