Design: 팔로잉, 팔로워 버튼 커서 포인터 스타일 추가

--- a/src/styles/Minihome/Header/MinihomeHeader.module.css
+++ b/src/styles/Minihome/Header/MinihomeHeader.module.css
@@ -125,6 +125,10 @@
   gap: 1rem;
   font-weight: bold;
 }
+.section_info > p:nth-child(2),
+.section_info > p:nth-child(3) {
+  cursor: pointer;
+}
 .section_bottom {
   display: flex;
   gap: 1rem;
