--- a/src/styles/Explore/ExploreMain.module.css
+++ b/src/styles/Explore/ExploreMain.module.css
@@ -30,6 +30,9 @@
 .header_title {
   font-size: 1.5rem;
 }
+.header_select_wrapper > label {
+  display: none;
+}
 .header_select {
   margin-left: auto;
   width: 6rem;
@@ -45,7 +48,7 @@
   flex-direction: column;
   gap: 1rem;
 }
-.section_nav {
+.section_header {
   height: 3rem;
   display: flex;
   align-items: center;
@@ -54,7 +57,7 @@
   position: relative;
   z-index: 10;
 }
-.section_nav > p {
+.section_header > span {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -65,13 +68,14 @@
   border-radius: 10px;
   font-family: "Pretendard-Bold", sans-serif;
 }
-.section_nav_background {
+.section_header_background {
   position: absolute;
   background-color: white;
   opacity: 0.4;
   z-index: -10;
   width: 100%;
   height: 100%;
+  border-radius: 10px;
 }
 /* ------------------------------------- */
 .article {
@@ -84,4 +88,16 @@
   flex-direction: column;
   gap: 0.5rem;
   list-style: none;
+}
+.article_pagelist {
+  /* box-shadow: inset 0 0 20px red; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  width: 100%;
+}
+.article_pagelist > ul {
+  list-style: none;
+  cursor: pointer;
 }
