--- a/src/styles/Market/Sell/MarketMySellingList.module.css
+++ b/src/styles/Market/Sell/MarketMySellingList.module.css
@@ -88,6 +88,8 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  overflow: scroll;
+  scrollbar-width: none;
 }
 .article_aside {
   width: 100%;
@@ -123,4 +125,8 @@
   gap: 0.5rem;
   overflow: scroll;
   scrollbar-width: none;
+}
+.article_section_text {
+  width: 100%;
+  text-align: center;
 }
