--- a/src/styles/Explore/ExploreMain.module.css
+++ b/src/styles/Explore/ExploreMain.module.css
@@ -47,6 +47,8 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  overflow: scroll;
+  scrollbar-width: none;
 }
 .section_header {
   height: 3rem;
@@ -91,6 +93,8 @@
   flex-direction: column;
   gap: 0.5rem;
   list-style: none;
+  overflow: scroll;
+  scrollbar-width: none;
 }
 .article_listnav {
   display: flex;
