--- a/src/styles/User/UserLogin.module.css
+++ b/src/styles/User/UserLogin.module.css
@@ -31,11 +31,16 @@
 .main_wrapper {
   margin: 0 auto;
   width: 20rem;
+}
+/* ------------------------------------------------------------ */
+.login_list {
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
-/* ------------------------------------------------------------ */
+.login_list > li {
+  list-style: none;
+}
 .kakao,
 .github {
   width: 12rem;
@@ -64,8 +69,8 @@
   border-radius: 100%;
   background-color: #333;
 }
-.kakao > p,
-.github > p {
+.kakao > span,
+.github > span {
   flex-grow: 1;
   font-size: 0.9rem;
 }
