Design: 시멘틱 태그 전환에 따른 스타일 코드 일부 수정

--- a/src/styles/User/UserJoin.module.css
+++ b/src/styles/User/UserJoin.module.css
@@ -96,6 +96,9 @@
   display: flex;
   gap: 0.5rem;
 }
+.form_section_article_contents > label {
+  display: none;
+}
 .form_section_article_contents > input {
   padding: 0.5rem;
   border-radius: 10px;
