--- a/src/styles/User/UserEdit.module.css
+++ b/src/styles/User/UserEdit.module.css
@@ -69,7 +69,6 @@
 .form_fieldset_figure_label > img:hover {
   box-sizing: border-box;
   transform: scale(1.1);
-  /* transition-duration: 200ms; */
   cursor: pointer;
 }
 .form_fieldset_figure_input:checked + .form_fieldset_figure_label > img {
@@ -83,26 +82,30 @@
   font-weight: bold;
 }
 /* ----------------------------------- */
-.form_section {
+.form_fieldset_1 {
   height: 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  border: none;
 }
-.form_section_article {
+.form_fieldset_1_article {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
 }
-.form_section_article_title {
+.form_fieldset_1_article_title {
   font-weight: bold;
   font-size: 1rem;
 }
-.form_section_article_contents {
+.form_fieldset_1_article_contents {
   display: flex;
   gap: 0.5rem;
 }
-.form_section_article_contents > input {
+.form_fieldset_1_article_contents > label {
+  display: none;
+}
+.form_fieldset_1_article_contents > input {
   padding: 0.5rem;
   border-radius: 10px;
   border: none;
