--- a/src/styles/Layouts/Bell.module.css
+++ b/src/styles/Layouts/Bell.module.css
@@ -1,4 +1,5 @@
 .container {
+  all: unset;
   position: absolute;
   top: 5rem;
   left: 1rem;
@@ -10,12 +11,18 @@
   gap: 0.5rem;
   font-weight: bold;
   color: #2d2d2d;
+  cursor: pointer;
+}
+.container > img:hover {
+  animation-name: ShakeBell;
+  animation-duration: 2s;
+  animation-delay: 200ms;
+  animation-timing-function: ease-in-out;
 }
 .container > img {
   width: 2.5rem;
   height: 2.5rem;
 }
-
 .isItem {
   position: absolute;
   top: 0.4rem;
@@ -24,4 +31,69 @@
   height: 0.5rem;
   background-color: red;
   border-radius: 100%;
+}
+@keyframes ShakeBell {
+  0% {
+    transform: rotate(0deg);
+  }
+  5% {
+    transform: rotate(10deg);
+  }
+  10% {
+    transform: rotate(-10deg);
+  }
+  15% {
+    transform: rotate(10deg);
+  }
+  20% {
+    transform: rotate(0deg);
+  }
+  25% {
+    transform: rotate(0deg);
+  }
+  30% {
+    transform: rotate(0deg);
+  }
+  35% {
+    transform: rotate(0deg);
+  }
+  40% {
+    transform: rotate(-10deg);
+  }
+  45% {
+    transform: rotate(10deg);
+  }
+  50% {
+    transform: rotate(-10deg);
+  }
+  55% {
+    transform: rotate(10deg);
+  }
+  60% {
+    transform: rotate(-10deg);
+  }
+  65% {
+    transform: rotate(10deg);
+  }
+  70% {
+    transform: rotate(-10deg);
+  }
+  75% {
+    transform: rotate(10deg);
+  }
+  80% {
+    transform: rotate(-10deg);
+  }
+  85% {
+    transform: rotate(10deg);
+  }
+  90% {
+    transform: rotate(-10deg);
+  }
+  95% {
+    transform: rotate(10deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
 }
