--- a/src/styles/Layouts/Button.module.css
+++ b/src/styles/Layouts/Button.module.css
@@ -12,3 +12,9 @@
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
   cursor: pointer;
 }
+@media (width <= 1024px) {
+  .backBtn {
+    height: 1.2rem;
+    font-size: 0.875rem;
+  }
+}
