--- a/src/styles/Layouts/Coin.module.css
+++ b/src/styles/Layouts/Coin.module.css
@@ -15,3 +15,20 @@
 .coin > p {
   font-size: 1.125rem;
 }
+@media (width <= 1024px) {
+  .coin {
+    height: 1.2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .coin > p{
+    height: 1.2rem;
+    font-size: 0.875rem;
+    line-height: 1.3rem;
+  }
+  .coin > img {
+    width: 0.875rem;
+    height: 0.875rem;
+  }
+}
