--- a/src/styles/Layouts/Footer.module.css
+++ b/src/styles/Layouts/Footer.module.css
@@ -1,5 +1,5 @@
 .container {
-  min-width: 68rem;
+  /* min-width: 68rem; */
   width: 100%;
 }
 .wrapper {
@@ -14,16 +14,36 @@
   padding: 1rem;
   display: flex;
   gap: 1rem;
-  font-weight: bold;
+  /* font-weight: bold; */
   color: gray;
 }
 .header > a {
   text-decoration: none;
   color: gray;
 }
+.header > p:nth-child(3) {
+  font-weight: bold;
+}
 .main > a {
   padding: 1rem;
   text-decoration: none;
   color: gray;
   font-weight: bold;
+}
+
+/* 반응형 UI */
+@media (width <= 1024px) {
+  .container {
+    min-width: 375px;
+  }
+  .wrapper {
+    padding: 4px;
+  }
+  .header {
+    gap: 0.5rem;
+  }
+  .header,
+  .main > a {
+    padding: 0;
+  }
 }
