--- a/src/styles/Layouts/Header.module.css
+++ b/src/styles/Layouts/Header.module.css
@@ -1,5 +1,5 @@
 .container {
-  min-width: 68rem;
+  /* min-width: 68rem; */
   height: 4rem;
   position: sticky;
   top: 0;
@@ -22,4 +22,37 @@
   align-items: center;
   justify-content: end;
   gap: 0.5rem;
+}
+/* 반응형 UI */
+@media (width <= 1024px) {
+  .container {
+    min-width: 375px;
+  }
+  .wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 4px;
+    box-sizing: border-box;
+  }
+  .title {
+    width: 100%;
+    height: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .title > img {
+    width: 12rem;
+    height: 100%;
+  }
+  .link_wrapper {
+    width: 100%;
+    height: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-grow: 0;
+  }
 }
