Design: 반응형 UI 적용

--- a/src/styles/Layouts/BellItems.module.css
+++ b/src/styles/Layouts/BellItems.module.css
@@ -32,3 +32,14 @@
   align-items: center;
   justify-content: center;
 }
+/* 반응형 UI */
+@media (width <= 1024px) {
+  .container {
+    top: 7rem;
+    left: 0.5rem;
+    background-color: rgba(255, 255, 255, 0.9);
+  }
+  .article {
+    font-size: 0.875rem;
+  }
+}
