--- a/src/styles/Layouts/Bell.module.css
+++ b/src/styles/Layouts/Bell.module.css
@@ -97,3 +97,20 @@
     transform: rotate(0deg);
   }
 }
+/* 반응형 UI */
+@media (width <= 1024px) {
+  .container {
+    top: 4.5rem;
+    left: 0.2rem;
+    width: 2rem;
+    height: 2rem;
+  }
+  .container > img {
+    width: 2rem;
+    height: 2rem;
+  }
+  .isItem {
+    top: 0.1rem;
+    right: 0.4rem;
+  }
+}
