--- a/src/styles/Minihome/MiniHomeMain.module.css
+++ b/src/styles/Minihome/MiniHomeMain.module.css
@@ -53,7 +53,7 @@
 /* ---------------------------------------- */
 .section_article_2 {
   flex-grow: 1;
-  height: 30rem;
+  height: 100%;
   position: relative;
   z-index: 5;
   border: none;
@@ -74,4 +74,51 @@
   opacity: 0.4;
   z-index: -30;
   border-radius: 10px;
+}
+/* 반응형 UI */
+@media (width <= 1024px) {
+  .container {
+    min-width: 375px;
+    padding: 4px;
+    align-items: start;
+  }
+  .wrapper {
+    width: 100%;
+    height: 100%;
+    gap: 0;
+  }
+  .section {
+    flex-grow: 1;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+  .section_aside {
+    margin-left: 0;
+    font-size: 0.875rem;
+  }
+  .section_article_1 {
+    height: 100%;
+  }
+  .section_article_1_imgList {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  .section_article_2 {
+    flex-grow: 1;
+    height: 100%;
+    position: relative;
+    z-index: 5;
+    border: none;
+    border-radius: 10px;
+    padding: 4px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
 }
