--- a/src/styles/Minihome/Reply/MinihomeReplyItem.module.css
+++ b/src/styles/Minihome/Reply/MinihomeReplyItem.module.css
@@ -49,12 +49,7 @@
   font-size: 0.9rem;
 }
 .main_reply_content {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
   width: 100%;
-}
-.main_reply_content_wrapper {
   display: flex;
   gap: 0.5rem;
 }
@@ -91,8 +86,64 @@
 }
 .main_buttons > p:hover {
   font-weight: bold;
-  color: gray;
+  color: blue;
 }
 .main_buttons > p:nth-child(2):hover {
   color: red;
+}
+/* 반응형 UI */
+@media (width <= 1024px) {
+  .main_reply {
+    display: flex;
+    gap: 0.2rem;
+    align-items: center;
+    padding: 4px;
+    box-sizing: border-box;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    position: relative;
+  }
+  .main_reply_header {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 0.5rem 0 0;
+    box-sizing: border-box;
+  }
+  .main_reply_user {
+    display: flex;
+    gap: 0.5rem;
+    align-items: center;
+  }
+  .main_reply_user > img {
+    width: 2rem;
+    height: 2rem;
+  }
+  .main_reply_date {
+    font-size: 0.75rem;
+  }
+  .main_reply_content {
+    display: flex;
+    gap: 0.5rem;
+  }
+  .main_bottom {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    box-sizing: border-box;
+    font-size: 1rem;
+    padding: 0 0.5rem 0 0;
+    box-sizing: border-box;
+  }
+  .main_bottom > p {
+    padding: 0.5rem;
+    flex-grow: 1;
+    font-size: 0.875rem;
+  }
 }
