--- a/src/styles/User/UserLogin.module.css
+++ b/src/styles/User/UserLogin.module.css
@@ -1,12 +1,11 @@
 .container {
-  min-width: 1280px;
+  min-width: 68rem;
   height: 100vh;
   padding: 4rem 20rem;
   box-sizing: border-box;
   background: linear-gradient(to bottom, #d8faff, #b6cdff);
 }
 .wrapper {
-  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -14,37 +13,35 @@
 }
 /* ------------------------------------------------------------ */
 .header {
-  width: 100%;
-  height: 30%;
   text-align: center;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 .title {
   font-size: 3rem;
 }
 .main {
   border-radius: 10px;
-  width: 100%;
+  width: 50%;
 }
 .main_wrapper {
   margin: 0 auto;
-  width: 20rem;
+  width: 100%;
 }
 /* ------------------------------------------------------------ */
 .login_list {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   gap: 1rem;
+  height: 100%;
 }
 .login_list > li {
   list-style: none;
+  height: 100%;
 }
 .kakao,
 .github {
-  width: 12rem;
-  height: 3rem;
+  width: 100%;
+  height: 100%;
   background-color: #fee500;
   color: #2d2d2d;
   font-size: 16px;
@@ -56,6 +53,7 @@
   align-items: center;
   gap: 0.5rem;
   cursor: pointer;
+  transition: transform 0.1s ease-in-out;
 }
 .github {
   background-color: #333;
@@ -74,12 +72,33 @@
   flex-grow: 1;
   font-size: 0.9rem;
 }
-.kakao,
-.github {
-  transition: transform 0.1s ease-in-out;
-  width: 100%;
-}
 .kakao:hover,
 .github:hover {
   transform: scale(1.05);
+}
+@media (width <= 1024px) {
+  .container {
+    min-width: 375px;
+    padding: 5rem 0.25rem;
+  }
+  .title {
+    font-size: 2rem;
+  }
+  /* ------------------------------------------------------------ */
+  .main {
+    width: 50%;
+  }
+  .main_wrapper {
+    margin: 0 auto;
+    width: 100%;
+  }
+  .kakao > img,
+  .github > img {
+    width: 1.2rem;
+    height: 1.2rem;
+  }
+  .kakao > span,
+  .github > span {
+    font-size: 0.875rem;
+  }
 }
