--- a/src/styles/Explore/ExploreItem.module.css
+++ b/src/styles/Explore/ExploreItem.module.css
@@ -32,3 +32,16 @@
   padding: 0.2rem;
   box-sizing: border-box;
 }
+/* 반응형 UI */
+@media (width <= 1024px) {
+  .list {
+    height: 3rem;
+  }
+  .list > p, .list > div {
+    font-size: 0.875rem;
+  }
+  .list > div > img {
+    width: 2rem;
+    height: 2rem;
+  }
+}
