--- a/src/styles/Explore/ExploreMain.module.css
+++ b/src/styles/Explore/ExploreMain.module.css
@@ -96,44 +96,29 @@
   overflow: scroll;
   scrollbar-width: none;
 }
-.article_listnav {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 0.5rem;
-  width: 100%;
-}
-.article_listnav > ul {
-  list-style: none;
-  cursor: pointer;
-}
-.article_pagelist {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 0.5rem;
-  width: 100%;
-}
-.article_page {
-  width: 1.5rem;
-  height: 1.5rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 0.2rem;
-  box-sizing: border-box;
-  font-weight: bold;
-}
-.article_activePage {
-  width: 1.5rem;
-  height: 1.5rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 0.2rem;
-  box-sizing: border-box;
-  color: white;
-  background-color: #666666;
-  border-radius: 100%;
-  font-weight: bold;
+/* 반응형 UI */
+@media (width <= 1024px) {
+  .container {
+    min-width: 375px;
+    height: 100vh;
+    padding: 5rem 0.25rem;
+  }
+  .wrapper {
+    width: 100%;
+    gap: 1rem;
+  }
+  .header_title {
+    font-size: 1.2rem;
+  }
+  .header_select {
+    width: 100%;
+    height: 100%;
+    font-size: 0.875rem;
+  }
+  .section_header {
+    height: 2.5rem;
+  }
+  .section_header > span {
+    font-size: 0.875rem;
+  }
 }
