--- a/src/styles/Gacha/GachaCapsule.module.css
+++ b/src/styles/Gacha/GachaCapsule.module.css
@@ -1,11 +1,7 @@
 .container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  position: absolute;
   width: 100%;
   height: 100%;
-  border-radius: 20px;
-  position: absolute;
   z-index: 10;
 }
 .wrapper {
@@ -18,34 +14,18 @@
   justify-content: center;
   z-index: 30;
 }
-/* ---------------------------------------- */
 .background {
   position: absolute;
   width: 100%;
   height: 100%;
   background-color: black;
   opacity: 0.8;
-  border-radius: 20px;
   z-index: 20;
 }
-
-
-.closeBTN {
-  position: absolute;
-  font-size: 2rem;
-  font-weight: bold;
-  color: white;
-  background-color: gray;
-  border: 1px solid gray;
-  box-shadow: 0 0 3px 1px;
-  padding: 0.5rem;
-  border-radius: 10px;
-  right: 0;
-  top: 0;
-  margin: 2rem 2rem 0 0;
-  cursor: pointer;
-  z-index: 50;
-}
-.closeBTN:hover {
-  color: tomato;
+/* 반응형 UI */
+@media (width <= 1024px) {
+  .wrapper {
+    padding: 5rem 0.25rem;
+    align-items: start;
+  }
 }
