--- a/src/styles/Gacha/GachaCloseCapsule.module.css
+++ b/src/styles/Gacha/GachaCloseCapsule.module.css
@@ -76,3 +76,10 @@
     transform: rotate(0deg);
   }
 }
+/* 반응형 UI */
+@media (width <= 1024px) {
+  .close_capsule {
+    width: 12rem;
+    height: 14rem;
+  }
+}
