Design: 아이템 북 반응형 UI 적용

--- a/src/styles/Minihome/ItemBook/MinihomeItemBook.module.css
+++ b/src/styles/Minihome/ItemBook/MinihomeItemBook.module.css
@@ -81,3 +81,41 @@
   overflow: scroll;
   scrollbar-width: none;
 }
+/* 반응형 UI */
+@media (width <= 1024px) {
+  .container {
+    min-width: 375px;
+    padding: 3rem 0.25rem;
+  }
+  .wrapper {
+    width: 100%;
+    gap: 1rem;
+  }
+  .header_title {
+    font-size: 1.2rem;
+  }
+  .button {
+    height: 2rem;
+    font-size: 1rem;
+  }
+  .active_button {
+    height: 2rem;
+    font-size: 1rem;
+  }
+  .section_article_section {
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+  }
+}
+@media (width <= 768px) {
+  .section_article_section {
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+  }
+}
+@media (width <= 640px) {
+  .section_article_section {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+  }
+}
