--- a/src/styles/Market/Sell/MarketMySellingItem.module.css
+++ b/src/styles/Market/Sell/MarketMySellingItem.module.css
@@ -35,3 +35,19 @@
   align-items: center;
   justify-content: center;
 }
+/* 반응형 UI */
+@media (width <= 1024px) {
+  .article {
+    height: 2rem;
+  }
+  .article_img > img {
+    width: 100%;
+    height: 100%;
+    aspect-ratio: 1/1;
+    border-radius: 10px;
+    object-fit: cover;
+  }
+  .article_item {
+    font-size: 0.875rem;
+  }
+}
