Design: 시멘틱 태그 수정으로 스타일 코드 수정

--- a/src/styles/Minihome/ItemBook/MinihomeItemBook.module.css
+++ b/src/styles/Minihome/ItemBook/MinihomeItemBook.module.css
@@ -39,6 +39,10 @@
   align-items: center;
   justify-content: space-between;
 }
+.section_nav > li {
+  list-style: none;
+  width: 100%;
+}
 /* --------------------------------------------- */
 .button {
   width: 100%;
